[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/dummies.gd" type="Script" id=2]
[ext_resource path="res://characters/monster/dummy.png" type="Texture" id=3]

[node name="Dummy" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="Health" parent="." index="2"]

max_health = 5

[node name="CollisionShape2D" parent="." index="3"]

position = Vector2( -0.6737, 12.478 )
scale = Vector2( 0.225947, 0.145044 )
_sections_unfolded = [ "Transform" ]

[node name="BodyPivot" parent="." index="4"]

editor/display_folded = false

[node name="Body" parent="BodyPivot" index="0"]

texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="WeaponPivot" parent="." index="5"]

position = Vector2( 16, 0 )

[node name="WeaponSpawn" parent="WeaponPivot" index="0"]

position = Vector2( 16, 0 )

[node name="Shadow" parent="." index="6"]

position = Vector2( 0, 12 )
scale = Vector2( 0.2, 0.15 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="LifeBarPivot" parent="." index="7"]

position = Vector2( 0, -24 )
scale = Vector2( 0.5, 0.5 )


